// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Components - test BoldText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "#c3c3c3",
      "fontSize": 16,
      "fontWeight": "bold",
      "opacity": 0.87,
    }
  }
>
  bold text
</Text>
`;

exports[`Component Components - test CurrencyAmount High Privacy - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "red",
            "color": "#ffffff",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
        $ -.--
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Components - test ErrorText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "white",
      "color": "#18bd18",
    }
  }
>
  error text
</Text>
`;

exports[`Component Components - test FadeText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "#c3c3c3",
      "opacity": 0.65,
    }
  }
>
  fade text
</Text>
`;

exports[`Component Components - test RegText - snapshot 1`] = `
<Text
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "white",
      "color": "red",
      "fontSize": 15,
      "fontWeight": "400",
      "opacity": 1,
    }
  }
>
  reg text
</Text>
`;

exports[`Component Components - test ZecAmount High Privacy - snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "flexDirection": "row",
      "marginHorizontal": 5,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "fontWeight": "700",
            "margin": 0,
            "padding": 0,
          }
        }
      >
         -.----
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Components - test ZecAmount Normal Privacy - snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "flexDirection": "row",
      "marginHorizontal": 5,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "fontWeight": "700",
            "margin": 0,
            "padding": 0,
          }
        }
        testID="undefined.big-part"
      >
         1.1234
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 14,
            "margin": 0,
            "marginBottom": 1.3333333333333333,
            "padding": 0,
          }
        }
        testID="undefined.small-part"
      >
        5678
      </Text>
    </View>
  </View>
</View>
`;
